--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
     >
       Scissor
     </button>
+    <p class="js-result"></p>
+    <p class="js-moves"></p>
+    <p class="js-score"></p>
     <button
       onclick="
     score.wins = 0;
@@ -65,6 +68,7 @@
     score.draw = 0;
     alert('Score has been reset');
     localStorage.removeItem('score');
+    updateScore();
     "
     >
       Reset Score
@@ -76,7 +80,7 @@
       lose: 0,
       draw: 0,
     };
-
+    updateScore();
     function playGame(playerMove) {
       const computerChoice = pickComputerMove();
       let result = "";
@@ -112,10 +116,23 @@
       } else {
         score.draw++;
       }
+      updateResult(result);
+      updateMoves(playerMove, computerChoice);
+      updateScore();
       localStorage.setItem("score", JSON.stringify(score));
-      alert(
-        `You picked ${playerMove} and computer picked ${computerChoice}. ${result} \n wins: ${score.wins} lose: ${score.lose} draw: ${score.draw}`
-      );
+    }
+    function updateResult(result) {
+      document.querySelector(".js-result").innerText = result;
+    }
+    function updateMoves(playerMove, computerMove) {
+      document.querySelector(
+        ".js-moves"
+      ).innerText = `You picked ${playerMove} and computer picked ${computerMove}`;
+    }
+    function updateScore() {
+      document.querySelector(
+        ".js-score"
+      ).innerText = `wins: ${score.wins}, lose: ${score.lose}, draw: ${score.draw}`;
     }
     function pickComputerMove() {
       const randomNumber = Math.random();
