update something something

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       lose: 0,
       draw: 0,
     };
-    updateScore();
+    /* updateScore(); */
     function playGame(playerMove) {
       const computerChoice = pickComputerMove();
       let result = "";
